--- a/plugin.xml
+++ b/plugin.xml
@@ -19,7 +19,7 @@
 
         <config-file target="res/xml/config.xml" parent="/*">
             <feature name="Call">
-                <param name="android-package" value="prexition.plugin.voip.CallActivity"/>
+                <param name="android-package" value="prexition.plugin.voip.CallPlugin"/>
             </feature>
         </config-file>
 
@@ -41,16 +41,35 @@
 
         <config-file target="AndroidManifest.xml" parent="/manifest/application">
             <service android:name="prexition.plugin.voip.SinchService"></service>
+            <activity android:name="prexition.plugin.voip.CallScreenActivity"></activity>
         </config-file>
 
-        <source-file src="src/android/libs/sinch-android-rtc-3.12.3.aar" target-dir="libs" framework="true"/>
-        <source-file src="src/android/CallActivity.java" target-dir="src/prexition/plugin/voip/"/>
+        <source-file src="src/android/libs/sinch-android-rtc-3.12.4.aar" target-dir="libs" framework="true"/>
+        <source-file src="src/android/CallPlugin.java" target-dir="src/prexition/plugin/voip/"/>
         <source-file src="src/android/AudioPlayer.java" target-dir="src/prexition/plugin/voip/"/>
         <source-file src="src/android/SinchService.java" target-dir="src/prexition/plugin/voip/"/>
         <source-file src="src/android/JSONErrorFactory.java" target-dir="src/prexition/plugin/voip/"/>
         <source-file src="src/android/PermissionHelper.java" target-dir="src/prexition/plugin/voip/"/>
+        <source-file src="src/android/CallScreenActivity.java" target-dir="src/prexition/plugin/voip"/>
 
         <resource-file src="src/android/res/raw/progress_tone.wav" target="res/raw/progress_tone.wav"/>
+
+        <resource-file src="src/android/res/mipmap-hdpi/loudspeaker.png" target="res/mipmap-hdpi/loudspeaker.png"/>
+        <resource-file src="src/android/res/mipmap-mdpi/loudspeaker.png" target="res/mipmap-mdpi/loudspeaker.png"/>
+        <resource-file src="src/android/res/mipmap-xhdpi/loudspeaker.png" target="res/mipmap-xhdpi/loudspeaker.png"/>
+        <resource-file src="src/android/res/mipmap-xxhdpi/loudspeaker.png" target="res/mipmap-xxhdpi/loudspeaker.png"/>
+        <resource-file src="src/android/res/mipmap-xxxhdpi/loudspeaker.png" target="res/mipmap-xxxhdpi/loudspeaker.png"/>
+
+        <resource-file src="src/android/res/mipmap-hdpi/loudspeaker.png" target="res/mipmap-hdpi/loudspeaker_on.png"/>
+        <resource-file src="src/android/res/mipmap-mdpi/loudspeaker.png" target="res/mipmap-mdpi/loudspeaker_on.png"/>
+        <resource-file src="src/android/res/mipmap-xhdpi/loudspeaker.png" target="res/mipmap-xhdpi/loudspeaker_on.png"/>
+        <resource-file src="src/android/res/mipmap-xxhdpi/loudspeaker.png" target="res/mipmap-xxhdpi/loudspeaker_on.png"/>
+        <resource-file src="src/android/res/mipmap-xxxhdpi/loudspeaker.png" target="res/mipmap-xxxhdpi/loudspeaker_on.png"/>
+
+        <resource-file src="src/android/res/drawable/roundcorner.xml" target="res/drawable/roundcorner.xml"/>
+        <resource-file src="src/android/res/layout/activity_call_screen.xml" target="res/layout/activity_call_screen.xml" />
+        <resource-file src="src/android/res/values/colors.xml" target="res/values/colors.xml" />
+        <resource-file src="src/android/res/values/styles.xml" target="res/values/styles.xml" />
 
     </platform>
 
