--- a/src/android/gradle/prexition-voip.gradle
+++ b/src/android/gradle/prexition-voip.gradle
@@ -10,6 +10,8 @@ cdvPluginPostBuildExtras.add({
 
  dependencies {
      compile(name:'sinch-android-rtc', version:'+', ext:'aar')
+     implementation 'com.android.support:appcompat-v7:26.1.0'
+     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
  }
 
 });
