--- a/plugin.xml
+++ b/plugin.xml
@@ -60,13 +60,15 @@
         <resource-file src="src/android/res/mipmap-xxhdpi/loudspeaker.png" target="res/mipmap-xxhdpi/loudspeaker.png"/>
         <resource-file src="src/android/res/mipmap-xxxhdpi/loudspeaker.png" target="res/mipmap-xxxhdpi/loudspeaker.png"/>
 
-        <resource-file src="src/android/res/mipmap-hdpi/loudspeaker.png" target="res/mipmap-hdpi/loudspeaker_on.png"/>
-        <resource-file src="src/android/res/mipmap-mdpi/loudspeaker.png" target="res/mipmap-mdpi/loudspeaker_on.png"/>
-        <resource-file src="src/android/res/mipmap-xhdpi/loudspeaker.png" target="res/mipmap-xhdpi/loudspeaker_on.png"/>
-        <resource-file src="src/android/res/mipmap-xxhdpi/loudspeaker.png" target="res/mipmap-xxhdpi/loudspeaker_on.png"/>
-        <resource-file src="src/android/res/mipmap-xxxhdpi/loudspeaker.png" target="res/mipmap-xxxhdpi/loudspeaker_on.png"/>
+        <resource-file src="src/android/res/mipmap-hdpi/loudspeaker_on.png" target="res/mipmap-hdpi/loudspeaker_on.png"/>
+        <resource-file src="src/android/res/mipmap-mdpi/loudspeaker_on.png" target="res/mipmap-mdpi/loudspeaker_on.png"/>
+        <resource-file src="src/android/res/mipmap-xhdpi/loudspeaker_on.png" target="res/mipmap-xhdpi/loudspeaker_on.png"/>
+        <resource-file src="src/android/res/mipmap-xxhdpi/loudspeaker_on.png" target="res/mipmap-xxhdpi/loudspeaker_on.png"/>
+        <resource-file src="src/android/res/mipmap-xxxhdpi/loudspeaker_on.png" target="res/mipmap-xxxhdpi/loudspeaker_on.png"/>
 
         <resource-file src="src/android/res/drawable/roundcorner.xml" target="res/drawable/roundcorner.xml"/>
+        <resource-file src="src/android/res/drawable/roundcorner_black.xml" target="res/drawable/roundcorner_black.xml"/>
+
         <resource-file src="src/android/res/layout/activity_call_screen.xml" target="res/layout/activity_call_screen.xml" />
         <resource-file src="src/android/res/values/colors.xml" target="res/values/colors.xml" />
         <resource-file src="src/android/res/values/styles.xml" target="res/values/styles.xml" />
