--- a/plugin.xml
+++ b/plugin.xml
@@ -46,7 +46,7 @@
         </config-file>
 
 
-        <source-file src="src/android/libs/sinch-android-rtc-3.12.9.aar" target-dir="app/libs" framework="true"/>
+        <source-file src="src/android/libs/sinch-android-rtc-3.15.0.aar" target-dir="app/libs" framework="true"/>
         <source-file src="src/android/CallPlugin.java" target-dir="src/prexition/plugin/voip/"/>
         <source-file src="src/android/AudioPlayer.java" target-dir="src/prexition/plugin/voip/"/>
         <source-file src="src/android/SinchService.java" target-dir="src/prexition/plugin/voip/"/>
@@ -104,6 +104,7 @@
         <config-file target="*-Info.plist" parent="UIBackgroundModes">
             <array>
                 <string>audio</string>
+                <string>voip</string>
             </array>
         </config-file>
 
